[YellowPage] fixed Bug #13477 revise align center problem in IOS env.

--- a/APP/NewYellowPage/www/css/index.css
+++ b/APP/NewYellowPage/www/css/index.css
@@ -110,7 +110,7 @@
 
 .q-result-grid > li div {
     float: left;
-    display: flex;
+    /*display: flex;*/
     flex-flow: column wrap;
     justify-content: center;
     overflow-wrap: break-word;
